# lambda-cube

./: .gitignore  NOTE.md  README.md  lambad-cube.cabal  makefile
CoC/: CoC.cabal
CoC/src/: PrettyPrint.hs
LC/: LC.hs  LC.lam  README.md  sample.lam  std.lam
PCF/: PCF.hs
STLC/: CHANGELOG.md  README.md  STLC.cabal  STLC.hs
STLC/src/: AST.hs  Syntax.hs  TypeChecker.hs
SystemF/: SystemF.cabal
UTLC/: CHANGELOG.md  README.md  UTLC.cabal
UTLC/data/: std.utlc
UTLC/src/: AST.hs  Eval.hs  Syntax.hs  Test.hs
